--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-simple-datatables": "^0.1.25"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "sirv-cli": "^1.0.0",
-    "svelte-icons": "^2.1.0",
-    "svelte-navigator": "^3.1.5"
+    "svelte-fa": "^2.2.1",
+    "svelte-navigator": "^3.1.5",
+    "svelte-table": "^0.1.18"
   }
 }
