--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-simple-datatables": "^0.1.25"
+    "svelte": "^3.0.0"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
