--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@smui/button": "^4.2.0",
+    "@smui/checkbox": "^4.2.0",
     "@smui/data-table": "^4.2.0",
     "@smui/dialog": "^4.2.0",
+    "@smui/form-field": "^4.2.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
